tests/fsharp/typecheck/sigs/neg42.bsl

neg42.fsi(3,1,3,5): parse error FS0010: Unexpected keyword 'type' in signature file. Expected ':', '=' or other token.
