tests/fsharp/typecheck/sigs/neg42.fsi
namespace Neg42 
module Neg42Module
type X = A | B
